k8s/part8/constraint-template-noroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snoroot
spec:
  crd:
    spec:
      names:
        kind: K8sNoRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8snoroot

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        container.securityContext.runAsNonRoot == false
        msg := sprintf("Container '%v' must not run as root (runAsNonRoot must be true)", [container.name])
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("Container '%v' must not run as root user (runAsUser: 0 is forbidden)", [container.name])
      }
